[tool.poetry]
name = "crispy-guacamole"
version = "0.1.0"
description = "crispy-guacamole :3"
authors = ["PayneAM <alekspayne4909@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
